--- a/06.Practices/roughPractice/practice.html
+++ b/06.Practices/roughPractice/practice.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="navbar">
             <ul class="list-items">
-                <li class="items">Home service</li>
+                <li class="items">Home</li>
                 <li class="items">Contact</li>
                 <li class="items">About</li>
                 <li class="items">Services</li>
